This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
1/31/24: Fixed adjustment when assigning current stage positions to a
Navigator item and improved the "disparity in stage position" reports from
Realign to Item by using just the shifts in the images (In 4.1).
1/31/24: SEM_4-1-3
1/31/24: Fixed output of ReporCameraLength command in STEM mode (In 4.1).

1/29/24: Added cryptic checkbox to show index numbers before names in the
state dialog table.

1/28/24: Fixed GoToImagingState command to accept a full name if it is unique
even if it matches the start of another name (In 4.1).

1/27/24: Fixed various things in realigning to a scaled map and added ability
to skip both rounds of alignment at the lower mag.

1/25/24: SEM_4-2-0beta1
1/25/24: Relaxed defocus criteria for acceptable CTF fit in coma-free
alignment and add suggestion to try lower beam til temporarily (In 4.1).

1/25/24: Added ability to do third round of Realign to Item with scaled-up
extract from lower mag map.

1/25/24: Prevented saving of frames when re-imaging in a map state unless
specified in script to command to goto map state.

1/25/24: Fixed crash from 1/19 change for script at end of acquire.

1/25/24: Allowed Step To & Adjust procedure to concatenate the transformation
between mag 1 and mag 2 with a refining transform between mag 2 and mag 3 to
give a transformation directly from mag 1 to mag 3.

1/25/24: Adjusted default readout interval for Falcon 4i to give correct
number of frames for 6-sec exposures (In 4.1).

1/25/24: Fixed bad value for autofocus beam tilt being set if Check Autofocus
is stopped (In 4.1).

1/25/24: Allowed Realign to Item to work with groups collapsed (In 4.1).

1/20/24: Added checks for bad tilt series and montage parameter indexes after