@@ -77,7 +77,7 @@
 static char THIS_FILE[] = __FILE__;
 #endif
 
-#define VERSION_STRING  "SerialEM Version 4.1.3"
+#define VERSION_STRING  "SerialEM Version 4.2.0beta"
 #define TAG_STRING      "(Tagged SEM_4-1-3, 1/31/24)"
 
 // Offsets for static window inside main frame
