@@ -3813,7 +3813,7 @@ BEGIN
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,10,185,107,10
     PUSHBUTTON      "?",IDC_BUTHELP,157,288,10,10
     CTEXT           "Buffer is currently rolling",IDC_STAT_BUFFER_ROLLS,17,83,106,8
-    CTEXT           "These settings apply to both Align to Template and Realign to Item when run from Acquire at Items",IDC_STAT_PARAMS_SHARED,10,127,157,16
+    CTEXT           "These settings apply to both Align to Template and Realign to Item, but only when run from Acquire at Items",IDC_STAT_PARAMS_SHARED,6,127,164,16
     CTEXT           "If both are run from there, image shift is reset only once",IDC_STAT_ONLY_ONCE,7,144,160,8
     CTEXT           "The image in A is already a map",IDC_STAT_WHY_A_NO_GOOD,9,59,156,8
     CONTROL         "",IDC_STAT_LINE3,"Static",SS_BLACKFRAME | SS_SUNKEN,9,198,157,1
